# osl-sandbox

./: .gitignore  README.md
example-hip/: CMakeLists.txt  CMakePresets.json  HipRenderer.cpp  HipRenderer.hpp  RenderLib.hip.cpp  RenderLib.hpp  StringHash.hpp  main.cpp  op.cpp
example-hip/cmake/: hip_macros.cmake
hip_defines/: compile.sh  main.cpp
linking-linked-bc/: CMakeLists.txt  main.cpp  opsA.cpp  opsB.cpp  prepare_ABops.sh  shadeops_hip.bc.fatbin
load_shadeops/: CMakeLists.txt  PerfStatsLog.txt  linked.hipfb  main.cpp  shadeops_hip.hsaco
separate-compilation/: CMakeLists.txt  README.md  kernel.cpp  main.cpp  manual_kernel_compilation.sh  ops.cpp
